//20181101 Version 1.0.0.1
/*
 * 1. 定义门禁操作grpc交互接口
 * 2. 定义ITC语音对讲grpc交互接口
 */

syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.hngd.rpc.dg";
option java_outer_classname = "DgApiProto";


package hngdrpcdg;

// 设备网关接口
service DgApi {
 
  //[设置门的状态:关门,短开门,常开门]
  rpc SetDoorStatus(DoorRequest) returns (CommonResponse) {}
  //定义接口---[ITC语音对讲操作]
  rpc ITCTalkOperation(ITCTalkOperationRequest) returns (CommonResponse) {}
  //定义接口---[录像查询]
  rpc QueryFileOperation(QuryFileRequest) returns (CommonResponse) {}
  //定义接口---[周期任务配置]
  rpc PeriodicTaskConfig(PerTaskRequest) returns (CommonResponse) {}
}

//门的状态
enum DoorStatus {
   CLOSE         = 0;//关门
   OPEN_ONCE     = 1;//开门（短开，开门后自动延时关门）
   OPEN_ALLWAYS  = 2;//开门（长开）
}

//错误码
enum ErrorCode {
    OK           = 0;
	FAILED       = 1;
	OTHERS       = 2;//TODO错误码定义
}

//ITC语音对讲操作码
enum ITCOperationCode {
   IOC_SPEECHSTART     = 0;//开始寻呼
   IOC_SPEECHSTOP      = 1;//结束寻呼
   IOC_TALKSTART       = 2;//开始对讲
   IOC_TALKSTOP        = 3;//结束对讲
   IOC_TALKACCEPT      = 4; //接听对讲
}



//周期任务配置类型
enum ConfigType {
	ADD             = 0;//增加
	DEL             = 1;//删除
	CLEAR           = 2;//清理
}

//设备信息
message DeviceInfo {
	required string strDeviceCode     = 1;
	optional string strLoginName      = 2;
	optional string strLoginPwd       = 3;
	optional int32 nPort              = 4;
	optional string strIP             = 5;
	optional int32 nChannel           = 6;
	optional string deviceTypeCode    = 9;//例如IPC,
	optional string enVendor          = 10;
}

//门禁类开关门请求
message DoorRequest { 
   required DeviceInfo devInfo       = 1;
   optional DoorStatus doorStatus    = 2;
}

//ITC语音对讲操作
message ITCTalkOperationRequest {
   required DeviceInfo devInfo    = 1;//ITC对接软件的信息即为设备信息
   required ITCOperationCode iocd = 2;
   optional int32 fromTrmId        = 3;//发起者终端ID;
   optional string toTrmIds        = 4;//寻呼接收者终端ID，可能有多个，用逗号分隔。对讲接收者终端ID只有1个
   optional int32 acceptTrmID      = 5;//接收对讲者终端ID
}



//录像查询请求参数
message RecordQueryParam{ 
	optional int32 subStream = 1;
	optional string fileType = 2;// 文件类型 Time|Alarm|Manual|All
	optional int64 startTime = 3;
	optional int64 endTime   = 4;
}

//录像查询请求
message QuryFileRequest {
	repeated DeviceInfo devInfo           = 1;
	optional RecordQueryParam  reQueryParam   = 2;
	
}

//周期任务配置请求
message PerTaskRequest {
    repeated DeviceInfo devInfo           = 1;
	optional RecordQueryParam  reQueryParam   = 2;
	optional int32 perSecs                          = 3;//循环周期，单位：秒
}
//通用请求应答
message CommonResponse{
   required ErrorCode errorCode =1; //错误码
   optional string description=2; //错误描述信息
   optional bytes data=3;          //数据
}